--- a/public/chat-home-page.html
+++ b/public/chat-home-page.html
@@ -7,19 +7,25 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 
-
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="main.js" defer></script>
 </head>
 
 <body>
+<div class="autentification-modal modal">
+    <div class="overlay"></div>
+    <div class="modal__contents modal--transition">
+        <h2 class="modal-title">Log in</h2>
+        <input type="text" class="modal-input" id="userName" placeholder="Your name">
+        <input type="password" class="modal-input" id="userPassword" placeholder="Your password">
+        <button class="form-submit-btn">Submit</button>
+    </div>
+</div>
 <ol class="chat">
     <li class="other">
         <div class="avatar"><img src="https://i.imgur.com/DY6gND0.png" draggable="false"/></div>
         <div class="msg">
-            <p>
-                <emoji class="scream"/>
-            </p>
+            <p class="msg-name msg-name-left">Ben</p>
             <p>Pásamelo!
                 <emoji class="please"/>
             </p>
@@ -29,6 +35,7 @@
     <li class="self">
         <div class="avatar"><img src="https://i.imgur.com/HYcn9xO.png" draggable="false"/></div>
         <div class="msg">
+            <p class="msg-name msg-name-right">Martin</p>
             <img src="https://i.imgur.com/QAROObc.jpg" draggable="false"/>
             <time>20:19</time>
         </div>
@@ -36,6 +43,7 @@
     <li class="other">
         <div class="avatar"><img src="https://i.imgur.com/DY6gND0.png" draggable="false"/></div>
         <div class="msg">
+            <p class="msg-name msg-name-left">Ben</p>
             <p>Gracias!
                 <emoji class="hearth_blue"/>
             </p>
@@ -46,6 +54,7 @@
     <li class="self">
         <div class="avatar"><img src="https://i.imgur.com/HYcn9xO.png" draggable="false"/></div>
         <div class="msg">
+            <p class="msg-name">Martin</p>
             <p>Te apetece jugar a Minecraft?</p>
             <time>18:03</time>
         </div>
